stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_no_such_tenure_info_property.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "07d3482d05c9e007a56de1f56f5d5b267aed1428c618b68c144d1eb6b11c50aa",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-tenure-info-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of unresolved function \'get-tenure-info?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 855,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 855,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b4632aafe7321437c72070c86510cd0d82543c2fcb9152bd8474006d812ad957",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-tenure-info-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: use of unresolved function \'get-tenure-info?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 855,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 855,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6ba12229805648cf6da579dca26ef85bf7cba8fd1a7c03fb4b5538c4fc746bb3",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-tenure-info-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: use of unknown tenure property \'none\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 958,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 958,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "87dfa6c151c1049f3888b51186d7420fe7d562f6946a77bd99ad3921e4b77a02",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-tenure-info-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: use of unresolved function \'get-tenure-info?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 855,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 855,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "14028138a99ce295c042adac177ebcbc677a6718e03f4c25caf850837dc3a42b",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-tenure-info-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: use of unresolved function \'get-tenure-info?\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 855,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 855,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a099b047d232d4d37ae2601aa87b7b052df2270b9e5e913a201ffe6904101fd5",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-tenure-info-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: use of unknown tenure property \'none\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 958,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 958,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "0057a5aba7e3bd21b2beb7649b92731b43b8d5d6271d7e60d305bddecc595da6",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-such-tenure-info-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: use of unknown tenure property \'none\') [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 5,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 958,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 5,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 958,
    ),
  )),
]
